--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .body{
     margin-top: 80px;
     margin-left: 250px;
@@ -28,7 +27,7 @@ button {
     
     width: 15%;
     height: 100px;
-    margin-top: -200px;
+    margin-top: -500px;
     margin-left: 750px;
 }
 
@@ -39,3 +38,10 @@ button {
     margin-left: 750px;
 }
 
+.owl{
+    margin-left: 250px;
+}
+
+.vendor {
+    margin-left: 750px;
+}
